--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -71,6 +71,44 @@
             <artifactId>spring-test</artifactId>
             <version>6.1.6</version>
         </dependency>
+        <!-- Apache POI 基础依赖 -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.12</version> <!-- 请确认最新版本 -->
+        </dependency>
+
+        <!-- Apache POI 用于支持 .xlsx 格式的依赖 -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.12</version> <!-- 请确认最新版本 -->
+        </dependency>
+
+        <!-- 用于处理日期和时间 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.4</version>
+        </dependency>
+
+        <!-- 如果使用 XML 相关功能（可选） -->
+
+
+
+        <!-- 如果需要压缩支持（如 Excel 文件中嵌入图片等，通常为可选） -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.21</version>
+        </dependency>
+
+        <!-- 如果项目中用到日志功能 -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.9</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
