--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -31,3 +31,19 @@ file.upload-dir=uploads/
 
 # ??????????
 spring.web.resources.static-locations=classpath:/static/,file:uploads/
+
+# Image storage config: local or s3
+pictureFile.storage-type=local # local or s3
+pictureFile.path=uploads/
+pictureFile.path-mapping=/uploads/
+
+# AWS S3 (placeholders) - when using S3 set pictureFile.storage-type=s3 and populate these
+s3.bucket-name=
+s3.region=ap-northeast-1
+s3.access-key-id=
+s3.secret-access-key=
+s3.endpoint-url=
+s3.use-path-style=false
+# Migration config - by default run in dry-run mode. Set to false to allow DB updates during migration.
+s3.migration.dry-run=true
+s3.migration.migrate-remote-urls=true
