--- a/frontend/src/main/resources/application.properties
+++ b/frontend/src/main/resources/application.properties
@@ -26,3 +26,16 @@ logging.level.org.hibernate.SQL=DEBUG
 # application.properties
 app.cors.allowed-origins=http://example.com , http://localhost:5173
 app.oauth.redirectUrl= http://localhost:5173/oauth2/redirect
+
+# Image storage config (frontend can read stored URLs as-is; no upload here)
+pictureFile.storage-type=local
+pictureFile.path=uploads/
+pictureFile.path-mapping=/uploads/
+
+# AWS S3 placeholders (for backend / migration). Set these if using S3 in backend
+s3.bucket-name=
+s3.region=ap-northeast-1
+s3.access-key-id=
+s3.secret-access-key=
+s3.endpoint-url=
+s3.use-path-style=false
