--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -100,6 +100,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- H2 in-memory database for integration tests -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+
 
         <!-- 如果需要压缩支持（如 Excel 文件中嵌入图片等，通常为可选） -->
         <dependency>
@@ -113,6 +120,18 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>2.0.9</version>
+        </dependency>
+        <!-- AWS SDK for S3 -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.20.72</version>
+        </dependency>
+        <!-- Apache Commons IO (helpers) -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.13.0</version>
         </dependency>
     </dependencies>
     <build>
