--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -33,13 +33,13 @@ file.upload-dir=uploads/
 spring.web.resources.static-locations=classpath:/static/,file:uploads/
 
 # Image storage config: local or s3
-pictureFile.storage-type=local # local or s3
+pictureFile.storage-type=s3
 pictureFile.path=uploads/
 pictureFile.path-mapping=/uploads/
 
-# AWS S3 (placeholders) - when using S3 set pictureFile.storage-type=s3 and populate these
-s3.bucket-name=
-s3.region=ap-northeast-1
+# AWS S3 - EC2 使用 IAM Role，無需填寫 access-key
+s3.bucket-name=onemorelottery-img
+s3.region=us-east-1
 s3.access-key-id=
 s3.secret-access-key=
 s3.endpoint-url=
